project/logs/20251010_121533.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:7:16: error: use of undeclared identifier 'DirectionalLight'
ConstantBuffer<DirectionalLight> gDirectionalLight : register(b1);
               ^
Object3d.PS.hlsl:9:23: error: redefinition of 'gTexture'
Texture2D<float32_t4> gTexture : register(t0);
                      ^
./Particle.hlsli:30:19: note: previous definition is here
Texture2D<float4> gTexture : register(t0);
                  ^
Object3d.PS.hlsl:10:14: error: redefinition of 'gSampler'
SamplerState gSampler : register(s0);
             ^
./Particle.hlsli:31:14: note: previous definition is here
SamplerState gSampler : register(s0);
             ^

Compile Succeeded, path:Object3d.PS.hlsl, profike:ps_6_0
 
